// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cart /> renders a basic, one product cart 1`] = `
<section
  aria-label="Shopping Cart Details"
  aria-live="polite"
  aria-relevant="all"
>
  <div>
    <span
      className="sr-only"
    >
      <span>
        Shopping cart details are loaded.
      </span>
    </span>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        <span>
          In Your Cart
        </span>
      </h5>
      <p>
        <span>
          Your purchase contains the following:
        </span>
      </p>
      <div
        className="row align-items-center mb-3"
      >
        <div
          className="col-5"
        >
          <div
            className="embed-responsive embed-responsive-16by9"
          >
            <img
              alt=""
              className="img-thumbnail product-thumbnail"
              src="https://edx.org/awuuvo.gif"
            />
          </div>
        </div>
        <div
          className="col-7"
        >
          <h6
            aria-level="3"
            className="m-0"
          >
            Introduction to Lions
          </h6>
          <p
            className="m-0"
          >
            <span>
              Verified Certificate
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="summary-heading"
      aria-live="polite"
      className="basket-section"
      role="region"
    >
      <h5
        aria-level="2"
        id="summary-heading"
      >
        <span>
          Summary
        </span>
      </h5>
      <div
        className="summary-row d-flex"
      >
        <span
          className="flex-grow-1"
        >
          <span>
            Price
          </span>
        </span>
        <span>
          <span>
            $464.88
          </span>
        </span>
      </div>
      <div
        className="summary-row font-weight-bold d-flex"
      >
        <span
          className="flex-grow-1"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="text-right"
        >
          <span>
            $464.88
          </span>
        </span>
      </div>
    </div>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        Order Details
      </h5>
      <p>
        After you complete your order you will be able to select course dates from your dashboard.
      </p>
    </div>
  </div>
</section>
`;

exports[`<Cart /> renders a basic, one product cart with coupon form 1`] = `
<section
  aria-label="Shopping Cart Details"
  aria-live="polite"
  aria-relevant="all"
>
  <div>
    <span
      className="sr-only"
    >
      <span>
        Shopping cart details are loaded.
      </span>
    </span>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        <span>
          In Your Cart
        </span>
      </h5>
      <p>
        <span>
          Your purchase contains the following:
        </span>
      </p>
      <div
        className="row align-items-center mb-3"
      >
        <div
          className="col-5"
        >
          <div
            className="embed-responsive embed-responsive-16by9"
          >
            <img
              alt=""
              className="img-thumbnail product-thumbnail"
              src="https://edx.org/pewalme.jpg"
            />
          </div>
        </div>
        <div
          className="col-7"
        >
          <h6
            aria-level="3"
            className="m-0"
          >
            Introduction to Asian Elephants
          </h6>
          <p
            className="m-0"
          >
            <span>
              Verified Certificate
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="summary-heading"
      aria-live="polite"
      className="basket-section"
      role="region"
    >
      <h5
        aria-level="2"
        id="summary-heading"
      >
        <span>
          Summary
        </span>
      </h5>
      <div
        className="summary-row d-flex"
      >
        <span
          className="flex-grow-1"
        >
          <span>
            Price
          </span>
        </span>
        <span>
          <span>
            $445.19
          </span>
        </span>
      </div>
      <form
        className="summary-row d-flex align-items-end"
        onSubmit={[Function]}
      >
        <div
          className="form-group mb-0 mr-2"
        >
          <label
            className="h6 d-block"
            htmlFor="couponField"
          >
            <span>
              Add coupon code (optional)
            </span>
          </label>
          <input
            aria-describedby=""
            className="form-control"
            defaultValue=""
            id="couponField"
            name="couponField"
            type="text"
          />
        </div>
        <button
          className="btn btn-primary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="submit"
        >
          <span>
            Apply
          </span>
        </button>
      </form>
      <div
        className="summary-row font-weight-bold d-flex"
      >
        <span
          className="flex-grow-1"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="text-right"
        >
          <span>
            $445.19
          </span>
        </span>
      </div>
    </div>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        Order Details
      </h5>
      <p>
        After you complete your order you will be able to select course dates from your dashboard.
      </p>
    </div>
  </div>
</section>
`;

exports[`<Cart /> renders a bulk enrollment cart 1`] = `
<section
  aria-label="Shopping Cart Details"
  aria-live="polite"
  aria-relevant="all"
>
  <div>
    <span
      className="sr-only"
    >
      <span>
        Shopping cart details are loaded.
      </span>
    </span>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        <span>
          In Your Cart
        </span>
      </h5>
      <p>
        <span>
          Your purchase contains the following:
        </span>
      </p>
      <div
        className="row align-items-center mb-3"
      >
        <div
          className="col-5"
        >
          <div
            className="embed-responsive embed-responsive-16by9"
          >
            <img
              alt=""
              className="img-thumbnail product-thumbnail"
              src="https://edx.org/zacoh.gif"
            />
          </div>
        </div>
        <div
          className="col-7"
        >
          <h6
            aria-level="3"
            className="m-0"
          >
            Introduction to Mules
          </h6>
          <p
            className="m-0"
          >
            <span>
              Verified Certificate
            </span>
          </p>
        </div>
      </div>
      <form
        className="summary-row form-inline"
        onSubmit={[Function]}
      >
        <div
          className="form-group mr-2"
        >
          <label
            htmlFor="code-quantity"
          >
            <span>
              Quantity
            </span>
          </label>
          <div
            className="position-relative"
          >
            <input
              className="form-control form-control-sm"
              defaultValue={1}
              id="code-quantity"
              max="100"
              min="1"
              name="code-quantity"
              style={
                Object {
                  "width": "5rem",
                }
              }
              type="number"
            />
            <small
              className="text-muted small"
              style={
                Object {
                  "left": 0,
                  "position": "absolute",
                  "top": "100%",
                }
              }
            >
              <span>
                Max: 100
              </span>
            </small>
          </div>
        </div>
        <button
          aria-disabled={false}
          aria-live="assertive"
          className="btn pgn__stateful-btn pgn__stateful-btn-state-default btn-primary btn-sm"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="submit"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            <span>
              Update
            </span>
          </span>
        </button>
      </form>
    </div>
    <div
      aria-labelledby="summary-heading"
      aria-live="polite"
      className="basket-section"
      role="region"
    >
      <h5
        aria-level="2"
        id="summary-heading"
      >
        <span>
          Summary
        </span>
      </h5>
      <div
        className="summary-row"
      >
        <table
          className="w-100"
        >
          <thead>
            <tr>
              <th
                className="font-weight-normal"
              >
                <span>
                  Price
                </span>
              </th>
              <th
                className="font-weight-normal"
              >
                <span>
                  Quantity
                </span>
              </th>
              <th
                className="font-weight-normal text-right"
              >
                <span>
                  Subtotal
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <span>
                  $92.77
                </span>
              </td>
              <td>
                1
              </td>
              <td
                className="text-right"
              >
                <span>
                  $92.77
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="summary-row font-weight-bold d-flex"
      >
        <span
          className="flex-grow-1"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="text-right"
        >
          <span>
            $92.77
          </span>
        </span>
      </div>
    </div>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        Order Details
      </h5>
      <p>
        By purchasing, you and your organization agree to the following terms:
      </p>
      <ul>
        <li>
          Each code is valid for the one course covered and can be used only one time.
        </li>
        <li>
          You are responsible for distributing codes to your learners in your organization.
        </li>
        <li>
          Each code will expire in one year from date of purchase or, if earlier, once the course is closed.
        </li>
        <li>
          If a course is not designated as self-paced, you should confirm that a course run is available before expiration.
        </li>
        <li>
          You may not resell codes to third parties.
        </li>
        <li>
          All edX for Business sales are final and not eligible for refunds.
        </li>
      </ul>
      <p>
        You will receive an email at person@edx.org with your enrollment code(s).
      </p>
    </div>
  </div>
</section>
`;

exports[`<Cart /> renders a cart in non USD currency 1`] = `
<section
  aria-label="Shopping Cart Details"
  aria-live="polite"
  aria-relevant="all"
>
  <div>
    <span
      className="sr-only"
    >
      <span>
        Shopping cart details are loaded.
      </span>
    </span>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        <span>
          In Your Cart
        </span>
      </h5>
      <p>
        <span>
          Your purchase contains the following:
        </span>
      </p>
      <div
        className="row align-items-center mb-3"
      >
        <div
          className="col-5"
        >
          <div
            className="embed-responsive embed-responsive-16by9"
          >
            <img
              alt=""
              className="img-thumbnail product-thumbnail"
              src="https://edx.org/piwopihe.png"
            />
          </div>
        </div>
        <div
          className="col-7"
        >
          <h6
            aria-level="3"
            className="m-0"
          >
            Introduction to Turkeyss
          </h6>
          <p
            className="m-0"
          >
            <span>
              Verified Certificate
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="summary-heading"
      aria-live="polite"
      className="basket-section"
      role="region"
    >
      <h5
        aria-level="2"
        id="summary-heading"
      >
        <span>
          Summary
        </span>
      </h5>
      <div
        className="summary-row d-flex"
      >
        <span
          className="flex-grow-1"
        >
          <span>
            Price
          </span>
        </span>
        <span>
          <span>
            <span>
              MX$1,264
            </span>
             *
          </span>
        </span>
      </div>
      <div
        className="summary-row font-weight-bold d-flex"
      >
        <span
          className="flex-grow-1"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="text-right"
        >
          <span>
            <span>
              MX$1,264
            </span>
             *
          </span>
        </span>
      </div>
      <div
        className="text-muted font-italic"
      >
        <span>
          * This total contains an approximate conversion. You will be charged 
          <span>
            $66.22
          </span>
           USD.
        </span>
      </div>
    </div>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        Order Details
      </h5>
      <p>
        After you complete your order you will be able to select course dates from your dashboard.
      </p>
    </div>
  </div>
</section>
`;

exports[`<Cart /> renders a cart with an offer 1`] = `
<section
  aria-label="Shopping Cart Details"
  aria-live="polite"
  aria-relevant="all"
>
  <div>
    <span
      className="sr-only"
    >
      <span>
        Shopping cart details are loaded.
      </span>
    </span>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        <span>
          In Your Cart
        </span>
      </h5>
      <p>
        <span>
          Your purchase contains the following:
        </span>
      </p>
      <div
        className="row align-items-center mb-3"
      >
        <div
          className="col-5"
        >
          <div
            className="embed-responsive embed-responsive-16by9"
          >
            <img
              alt=""
              className="img-thumbnail product-thumbnail"
              src="https://edx.org/pubhe.jpg"
            />
          </div>
        </div>
        <div
          className="col-7"
        >
          <h6
            aria-level="3"
            className="m-0"
          >
            Introduction to African Wild Dogs
          </h6>
          <p
            className="m-0"
          >
            <span>
              Verified Certificate
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="summary-heading"
      aria-live="polite"
      className="basket-section"
      role="region"
    >
      <h5
        aria-level="2"
        id="summary-heading"
      >
        <span>
          Summary
        </span>
      </h5>
      <div
        className="summary-row d-flex"
      >
        <span
          className="flex-grow-1"
        >
          <span>
            Price
          </span>
        </span>
        <span>
          <span>
            $158.87
          </span>
        </span>
      </div>
      <div
        className="summary-row"
      >
        <p
          className="d-flex m-0"
        >
          <span
            className="flex-grow-1"
          >
            <span>
              Discounts applied
            </span>
          </span>
          <span>
            <span>
              $0.00
            </span>
          </span>
        </p>
        <p
          className="m-0 text-muted"
        >
          <span>
            <span>
              50%
            </span>
             discount provided by Pied Piper.
          </span>
        </p>
      </div>
      <div
        className="summary-row font-weight-bold d-flex"
      >
        <span
          className="flex-grow-1"
        >
          <span>
            TOTAL
          </span>
        </span>
        <span
          className="text-right"
        >
          <span>
            $158.87
          </span>
        </span>
      </div>
    </div>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        Order Details
      </h5>
      <p>
        After you complete your order you will be able to select course dates from your dashboard.
      </p>
    </div>
  </div>
</section>
`;

exports[`<Cart /> renders the loading skeleton 1`] = `
<section
  aria-label="Shopping Cart Details"
  aria-live="polite"
  aria-relevant="all"
>
  <div>
    <span
      className="sr-only"
    >
      <span>
        Loading, please wait...
      </span>
    </span>
    <div
      className="skeleton py-2 mb-3 w-50"
    />
    <div
      className="skeleton py-2 mb-4 mr-4"
    />
    <div
      className="row align-items-center mb-5"
    >
      <div
        className="col-5"
      >
        <div
          className="skeleton embed-responsive embed-responsive-16by9"
        />
      </div>
      <div
        className="col-7"
      >
        <div
          className="skeleton py-2 mb-3 w-50"
        />
        <div
          className="skeleton py-2 mr-4"
        />
      </div>
    </div>
    <div
      className="skeleton py-2 mb-3 w-50"
    />
    <div
      className="skeleton py-2 mb-2"
    />
    <div
      className="skeleton py-2 mb-5"
    />
    <div
      className="skeleton py-2 mb-3 w-50"
    />
    <div
      className="skeleton py-2 mb-2 mr-4"
    />
    <div
      className="skeleton py-2 mb-5 w-75"
    />
  </div>
</section>
`;
